tests/files/type_checker_tests/should_pass/060.cmdr
//Test that negate operations type check
x = -3;
