tests/files/type_checker_tests/should_fail/202.cmdr
//Should fail when defining pre-existing variables
x = 3;
type x = int;
